<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_gravity="center"
                android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/yes_no_action"
            android:text="@string/deletion"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:background="@color/colorTinyGrey"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <TextView
            android:text="@string/sur_to_delete"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorMapoGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/valid"
                android:layout_weight="1"
                android:text="@string/valid_suppression"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorRedDeletion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>